crates/index-scheduler/src/scheduler/snapshots/test_failure.rs/fail_in_process_batch_for_document_deletion/documents_remaining_should_only_be_bork.snap
---
source: crates/index-scheduler/src/scheduler/test_failure.rs
snapshot_kind: text
---
[
  {
    "id": 3,
    "doggo": "bork"
  }
]
